Improve JWT format with namespaces grouping (#175)